tests/e2e/cases/noself.err
Error: noself.clawr:4:17:Parameter name 'self' is reserved for the implicit receiver and may not be declared explicitly
