tests/e2e/cases/noself.clawr
object Test {
}

func pureMethod(self: Test) -> integer {
  return 42
}
